# library_management_system

./: .gitignore  DEMO.md  Makefile  README.md  TASK.md  main.py  pyproject.toml  requirements.txt
books/: __init__.py  managers.py  models.py  random_data_generate.py
cli_interface/: __init__.py  cli.py
constants/: __init__.py  base.py  books.py
core/exceptions/: books.py
core/managers/: books.py  random_data_generate.py
core/utils/: __init__.py  create_book_fields.py  get_year_field.py  search_book_by_fields.py  show_books.py
tests/: test_book_manager.py
